--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "css": "bunx tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^2.1.3",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
